Remove unnecessary workaround to open non-public members
- https://github.com/nulab/backlog4j/commit/750668607c220014bb416c24f6c6519ef1353d6b
- f09bafe8 Workaround to open non-public members
- d47bb9ff com.nulab-inc:backlog4j:2.5.3 -> 2.6.0