@@ -18,19 +18,11 @@ application {
 run {
     environment << getConfProperties('env.properties')
     systemProperty 'java.util.logging.config.file', file('src/conf/logging.properties')
-    jvmArgs = [
-            '--add-opens', 'java.base/sun.net.www.protocol.https=ALL-UNNAMED',
-            '--add-opens', 'java.base/java.net=ALL-UNNAMED',
-    ]
 }
 
 tasks.withType(Test).configureEach {
     environment << getConfProperties('env.properties')
     systemProperty 'java.util.logging.config.file', file('src/test/resources/logging.properties')
-    jvmArgs = [
-            '--add-opens', 'java.base/sun.net.www.protocol.https=ALL-UNNAMED',
-            '--add-opens', 'java.base/java.net=ALL-UNNAMED',
-    ]
 }
 
 @Memoized
